# cs6120

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
bril/: CMakeLists.txt
bril/include/bril/: CFG.h  CFGBuilder.h  Function.h  Inst.h  Literal.h  Program.h  Type.h  Value.h
bril/include/bril/support/: StringHash.h
bril/src/: CFG.cpp  CFGBuilder.cpp  Function.cpp  Inst.cpp  Literal.cpp  Program.cpp  Type.cpp  Value.cpp
bril/src/support/: Check.cpp  Check.h
bril_utils/: bb.py  cfg.py  fixed_point.py
bril_utils/collections/: object_map.py
lesson2/: __main__.py
lesson3/: __main__.py  local_dce.py  lvn.py
lesson4/: __main__.py  data_flow.py  live_var.py
